--- a/scores/index.html
+++ b/scores/index.html
@@ -367,6 +367,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>PaPaLarry</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -379,33 +421,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>PaPaLarry</td>
-<td>12,000</td>
+<td>JoAnnmeme</td>
+<td>20,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>bill</td>
+<td>16,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>Norma1</td>
+<td>14,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>PaPaLarry</td>
+<td>14,000</td>
+</tr>
+<tr>
+<td>5t</td>
+<td>Maryjean</td>
 <td>10,000</td>
 </tr>
 <tr>
-<td>3</td>
-<td>JoAnnmeme</td>
-<td>8,000</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Maryjean</td>
-<td>6,000</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Norma1</td>
-<td>4,000</td>
-</tr>
-<tr>
-<td>6</td>
+<td>5t</td>
 <td>Nana_Sharon</td>
-<td>2,000</td>
+<td>10,000</td>
 </tr>
 </tbody>
 </table>
