--- a/index.html
+++ b/index.html
@@ -380,6 +380,63 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>joe</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>patc</td>
+<td>750,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>700,000</td>
+</tr>
+<tr>
+<td>8</td>
+<td>JoAnnmeme</td>
+<td>650,000</td>
+</tr>
+<tr>
+<td>9</td>
+<td>gracie</td>
+<td>600,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -392,48 +449,48 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Norma1</td>
-<td>36,000</td>
+<td>PaPaLarry</td>
+<td>1,022,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>bill</td>
-<td>28,500</td>
+<td>joe</td>
+<td>960,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>JoAnnmeme</td>
-<td>23,000</td>
+<td>bill</td>
+<td>928,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>PaPaLarry</td>
-<td>22,000</td>
+<td>Norma1</td>
+<td>886,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Nana_Sharon</td>
-<td>20,000</td>
+<td>Maryjean</td>
+<td>818,250</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Maryjean</td>
-<td>18,250</td>
+<td>patc</td>
+<td>758,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>joe</td>
-<td>10,000</td>
+<td>Nana_Sharon</td>
+<td>720,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>patc</td>
-<td>8,000</td>
+<td>JoAnnmeme</td>
+<td>673,000</td>
 </tr>
 <tr>
 <td>9</td>
 <td>gracie</td>
-<td>4,000</td>
+<td>604,000</td>
 </tr>
 </tbody>
 </table>
