--- a/scores/index.html
+++ b/scores/index.html
@@ -399,6 +399,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -412,22 +449,22 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>50,000</td>
+<td>56,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>38,000</td>
+<td>50,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Norma1</td>
-<td>32,000</td>
+<td>40,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Nana_Sharon</td>
-<td>28,000</td>
+<td>38,000</td>
 </tr>
 <tr>
 <td>5</td>
@@ -435,14 +472,14 @@
 <td>22,000</td>
 </tr>
 <tr>
-<td>6</td>
-<td>patc</td>
+<td>6t</td>
+<td>JoAnnmeme</td>
 <td>20,000</td>
 </tr>
 <tr>
-<td>7</td>
-<td>JoAnnmeme</td>
-<td>16,000</td>
+<td>6t</td>
+<td>patc</td>
+<td>20,000</td>
 </tr>
 </tbody>
 </table>
