--- a/scores/index.html
+++ b/scores/index.html
@@ -399,6 +399,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -412,27 +449,27 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>74,000</td>
+<td>82,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Norma1</td>
-<td>64,000</td>
+<td>PaPaLarry</td>
+<td>74,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>PaPaLarry</td>
-<td>62,000</td>
+<td>Norma1</td>
+<td>70,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Nana_Sharon</td>
-<td>50,000</td>
+<td>54,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Maryjean</td>
-<td>36,000</td>
+<td>46,000</td>
 </tr>
 <tr>
 <td>6t</td>
