--- a/scores/index.html
+++ b/scores/index.html
@@ -414,6 +414,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>JoAnnmeme</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -427,37 +474,37 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>90,000</td>
+<td>98,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>86,000</td>
+<td>92,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Nana_Sharon</td>
-<td>76,000</td>
+<td>Norma1</td>
+<td>83,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>71,000</td>
+<td>Nana_Sharon</td>
+<td>78,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Maryjean</td>
-<td>60,000</td>
+<td>64,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>patc</td>
-<td>38,000</td>
+<td>48,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>JoAnnmeme</td>
-<td>30,000</td>
+<td>31,000</td>
 </tr>
 </tbody>
 </table>
