--- a/scores/index.html
+++ b/scores/index.html
@@ -419,6 +419,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>patc</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -431,38 +478,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>patc</td>
-<td>18,000</td>
-</tr>
-<tr>
-<td>2t</td>
 <td>Norma1</td>
-<td>14,000</td>
+<td>26,000</td>
 </tr>
 <tr>
-<td>2t</td>
-<td>bill</td>
-<td>14,000</td>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>22,000</td>
 </tr>
 <tr>
-<td>4</td>
+<td>3t</td>
 <td>Nana_Sharon</td>
-<td>13,000</td>
+<td>19,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>patc</td>
+<td>19,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>JoAnnmeme</td>
-<td>12,000</td>
+<td>bill</td>
+<td>16,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>PaPaLarry</td>
-<td>10,000</td>
+<td>14,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>Maryjean</td>
-<td>5,000</td>
+<td>13,000</td>
 </tr>
 </tbody>
 </table>
