--- a/scores/index.html
+++ b/scores/index.html
@@ -362,6 +362,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -380,27 +417,27 @@
 <tr>
 <td>2</td>
 <td>patc</td>
-<td>71,000</td>
+<td>77,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>66,000</td>
-</tr>
-<tr>
-<td>4</td>
 <td>Nana_Sharon</td>
-<td>62,000</td>
+<td>74,000</td>
 </tr>
 <tr>
-<td>5</td>
+<td>4t</td>
 <td>PaPaLarry</td>
-<td>60,000</td>
+<td>70,000</td>
+</tr>
+<tr>
+<td>4t</td>
+<td>bill</td>
+<td>70,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>JoAnnmeme</td>
-<td>51,000</td>
+<td>59,000</td>
 </tr>
 <tr>
 <td>7</td>
