--- a/scores/index.html
+++ b/scores/index.html
@@ -399,6 +399,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -411,33 +448,33 @@
 <tbody>
 <tr>
 <td>1</td>
+<td>patc</td>
+<td>87,000</td>
+</tr>
+<tr>
+<td>2</td>
 <td>Norma1</td>
 <td>83,000</td>
 </tr>
 <tr>
-<td>2</td>
-<td>patc</td>
-<td>77,000</td>
-</tr>
-<tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>74,000</td>
+<td>82,000</td>
 </tr>
 <tr>
-<td>4t</td>
+<td>4</td>
 <td>PaPaLarry</td>
-<td>70,000</td>
+<td>76,000</td>
 </tr>
 <tr>
-<td>4t</td>
+<td>5</td>
 <td>bill</td>
-<td>70,000</td>
+<td>74,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>JoAnnmeme</td>
-<td>59,000</td>
+<td>71,000</td>
 </tr>
 <tr>
 <td>7</td>
