--- a/scores/index.html
+++ b/scores/index.html
@@ -367,6 +367,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Norma1</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -379,38 +421,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Norma1</td>
-<td>93,000</td>
+<td>Nana_Sharon</td>
+<td>100,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>90,000</td>
+<td>Norma1</td>
+<td>97,000</td>
 </tr>
 <tr>
 <td>3</td>
+<td>JoAnnmeme</td>
+<td>89,000</td>
+</tr>
+<tr>
+<td>4</td>
 <td>patc</td>
 <td>87,000</td>
 </tr>
 <tr>
-<td>4</td>
-<td>PaPaLarry</td>
-<td>80,000</td>
-</tr>
-<tr>
 <td>5</td>
-<td>JoAnnmeme</td>
-<td>77,000</td>
+<td>PaPaLarry</td>
+<td>86,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>bill</td>
-<td>76,000</td>
+<td>78,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>Maryjean</td>
-<td>37,000</td>
+<td>45,000</td>
 </tr>
 </tbody>
 </table>
