--- a/index.html
+++ b/index.html
@@ -407,6 +407,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>bill</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -419,38 +461,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Nana_Sharon</td>
-<td>100,000</td>
+<td>Norma1</td>
+<td>105,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Norma1</td>
-<td>97,000</td>
+<td>Nana_Sharon</td>
+<td>102,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>JoAnnmeme</td>
-<td>89,000</td>
+<td>99,000</td>
 </tr>
 <tr>
 <td>4</td>
+<td>PaPaLarry</td>
+<td>92,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>90,000</td>
+</tr>
+<tr>
+<td>6</td>
 <td>patc</td>
 <td>87,000</td>
 </tr>
 <tr>
-<td>5</td>
-<td>PaPaLarry</td>
-<td>86,000</td>
-</tr>
-<tr>
-<td>6</td>
-<td>bill</td>
-<td>78,000</td>
-</tr>
-<tr>
 <td>7</td>
 <td>Maryjean</td>
-<td>45,000</td>
+<td>49,000</td>
 </tr>
 </tbody>
 </table>
