--- a/scores/index.html
+++ b/scores/index.html
@@ -419,7 +419,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="larrys-special">Larry's Special</h1>
 <table>
 <thead>
 <tr>
@@ -431,38 +431,85 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>JoAnnmeme</td>
-<td>20,000</td>
+<td>bill</td>
+<td>12,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
-<td>16,000</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
 </tr>
 <tr>
 <td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
 <td>patc</td>
-<td>14,000</td>
+<td>6,000</td>
 </tr>
 <tr>
-<td>4t</td>
-<td>Maryjean</td>
-<td>12,000</td>
-</tr>
-<tr>
-<td>4t</td>
-<td>Norma1</td>
-<td>12,000</td>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
 </tr>
 <tr>
 <td>6</td>
+<td>Maryjean</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Norma1</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
+<td>JoAnnmeme</td>
+<td>24,000</td>
+</tr>
+<tr>
+<td>1t</td>
+<td>PaPaLarry</td>
+<td>24,000</td>
+</tr>
+<tr>
+<td>3</td>
 <td>bill</td>
-<td>10,000</td>
+<td>22,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>20,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>14,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>13,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>Nana_Sharon</td>
-<td>2,000</td>
+<td>12,000</td>
 </tr>
 </tbody>
 </table>
