--- a/scores/index.html
+++ b/scores/index.html
@@ -367,6 +367,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>bill</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -379,38 +426,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>bill</td>
-<td>32,000</td>
+<td>Maryjean</td>
+<td>38,000</td>
 </tr>
 <tr>
-<td>2t</td>
-<td>PaPaLarry</td>
-<td>28,000</td>
-</tr>
-<tr>
-<td>2t</td>
+<td>2</td>
 <td>patc</td>
-<td>28,000</td>
+<td>36,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>33,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Maryjean</td>
-<td>26,000</td>
+<td>PaPaLarry</td>
+<td>32,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>JoAnnmeme</td>
-<td>24,000</td>
+<td>30,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Nana_Sharon</td>
-<td>18,000</td>
+<td>Norma1</td>
+<td>25,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Norma1</td>
-<td>15,000</td>
+<td>Nana_Sharon</td>
+<td>20,000</td>
 </tr>
 </tbody>
 </table>
