--- a/scores/index.html
+++ b/scores/index.html
@@ -414,6 +414,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Maryjean</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -426,38 +473,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Maryjean</td>
-<td>38,000</td>
+<td>patc</td>
+<td>46,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>patc</td>
-<td>36,000</td>
+<td>PaPaLarry</td>
+<td>44,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>bill</td>
-<td>33,000</td>
+<td>41,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>PaPaLarry</td>
-<td>32,000</td>
+<td>Maryjean</td>
+<td>39,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>JoAnnmeme</td>
-<td>30,000</td>
+<td>34,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Norma1</td>
-<td>25,000</td>
+<td>27,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>Nana_Sharon</td>
-<td>20,000</td>
+<td>26,000</td>
 </tr>
 </tbody>
 </table>
