Publishing to gh-pages (publish.sh) - 2024-08-09

--- a/scores/index.html
+++ b/scores/index.html
@@ -414,6 +414,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>KevinF</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>JoAnnmeme</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Maryjean</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -427,22 +474,22 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>58,000</td>
+<td>64,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>bill</td>
+<td>61,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
 <td>57,000</td>
 </tr>
 <tr>
-<td>3t</td>
+<td>4</td>
 <td>Maryjean</td>
-<td>49,000</td>
-</tr>
-<tr>
-<td>3t</td>
-<td>Norma1</td>
-<td>49,000</td>
+<td>50,000</td>
 </tr>
 <tr>
 <td>5</td>
@@ -451,18 +498,18 @@
 </tr>
 <tr>
 <td>6</td>
-<td>JoAnnmeme</td>
-<td>38,000</td>
+<td>Nana_Sharon</td>
+<td>43,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Nana_Sharon</td>
-<td>33,000</td>
+<td>JoAnnmeme</td>
+<td>40,000</td>
 </tr>
 <tr>
 <td>8</td>
 <td>KevinF</td>
-<td>12,000</td>
+<td>24,000</td>
 </tr>
 </tbody>
 </table>
