--- a/scores/index.html
+++ b/scores/index.html
@@ -367,6 +367,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>patc</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -380,37 +417,37 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>68,000</td>
+<td>72,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>bill</td>
-<td>63,000</td>
+<td>patc</td>
+<td>70,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>patc</td>
-<td>58,000</td>
+<td>bill</td>
+<td>69,000</td>
 </tr>
 <tr>
 <td>4</td>
+<td>JoAnnmeme</td>
+<td>60,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>59,000</td>
+</tr>
+<tr>
+<td>6</td>
 <td>Norma1</td>
 <td>57,000</td>
 </tr>
 <tr>
-<td>5</td>
+<td>7</td>
 <td>Maryjean</td>
 <td>56,000</td>
-</tr>
-<tr>
-<td>6</td>
-<td>Nana_Sharon</td>
-<td>51,000</td>
-</tr>
-<tr>
-<td>7</td>
-<td>JoAnnmeme</td>
-<td>50,000</td>
 </tr>
 <tr>
 <td>8</td>
