--- a/index.html
+++ b/index.html
@@ -402,6 +402,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>patc</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -415,27 +452,27 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>72,000</td>
+<td>80,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>patc</td>
-<td>70,000</td>
+<td>bill</td>
+<td>75,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>69,000</td>
+<td>patc</td>
+<td>74,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>JoAnnmeme</td>
-<td>60,000</td>
+<td>72,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Nana_Sharon</td>
-<td>59,000</td>
+<td>69,000</td>
 </tr>
 <tr>
 <td>6</td>
