--- a/scores/index.html
+++ b/scores/index.html
@@ -424,6 +424,58 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>KevinF</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Maryjean</td>
+<td>1,000</td>
+</tr>
+<tr>
+<td>8</td>
+<td>bill</td>
+<td>500</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -437,42 +489,42 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>97,000</td>
+<td>97,500</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>85,000</td>
+<td>97,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>patc</td>
-<td>82,000</td>
+<td>Nana_Sharon</td>
+<td>89,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Nana_Sharon</td>
-<td>79,000</td>
+<td>patc</td>
+<td>88,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Maryjean</td>
-<td>74,000</td>
-</tr>
-<tr>
-<td>6</td>
-<td>Norma1</td>
-<td>73,000</td>
-</tr>
-<tr>
-<td>7</td>
 <td>JoAnnmeme</td>
-<td>72,500</td>
+<td>80,500</td>
+</tr>
+<tr>
+<td>6t</td>
+<td>Maryjean</td>
+<td>75,000</td>
+</tr>
+<tr>
+<td>6t</td>
+<td>Norma1</td>
+<td>75,000</td>
 </tr>
 <tr>
 <td>8</td>
 <td>KevinF</td>
-<td>31,000</td>
+<td>35,000</td>
 </tr>
 </tbody>
 </table>
