--- a/scores/index.html
+++ b/scores/index.html
@@ -419,6 +419,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>KevinF</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>patc</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -431,33 +478,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>patc</td>
-<td>108,000</td>
+<td>PaPaLarry</td>
+<td>113,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>bill</td>
-<td>107,500</td>
+<td>111,500</td>
 </tr>
 <tr>
 <td>3</td>
-<td>PaPaLarry</td>
-<td>103,000</td>
+<td>patc</td>
+<td>110,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Nana_Sharon</td>
-<td>96,000</td>
+<td>Maryjean</td>
+<td>99,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Norma1</td>
-<td>88,000</td>
+<td>Nana_Sharon</td>
+<td>97,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Maryjean</td>
-<td>87,000</td>
+<td>Norma1</td>
+<td>94,000</td>
 </tr>
 <tr>
 <td>7</td>
@@ -467,7 +514,7 @@
 <tr>
 <td>8</td>
 <td>KevinF</td>
-<td>53,000</td>
+<td>61,000</td>
 </tr>
 </tbody>
 </table>
