--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>KevinF</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>JoAnnmeme</td>
+<td>750,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>700,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -384,43 +431,43 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>patc</td>
-<td>138,000</td>
+<td>Maryjean</td>
+<td>1,131,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
-<td>134,000</td>
+<td>KevinF</td>
+<td>1,032,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Maryjean</td>
-<td>131,000</td>
+<td>bill</td>
+<td>1,021,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Nana_Sharon</td>
-<td>129,000</td>
+<td>Norma1</td>
+<td>962,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>bill</td>
-<td>121,500</td>
+<td>PaPaLarry</td>
+<td>934,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Norma1</td>
-<td>112,000</td>
+<td>JoAnnmeme</td>
+<td>840,500</td>
 </tr>
 <tr>
 <td>7</td>
-<td>JoAnnmeme</td>
-<td>90,500</td>
+<td>Nana_Sharon</td>
+<td>829,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>KevinF</td>
-<td>82,000</td>
+<td>patc</td>
+<td>138,000</td>
 </tr>
 </tbody>
 </table>
