--- a/index.html
+++ b/index.html
@@ -387,6 +387,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="mjs-special">MJ's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -400,37 +442,37 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>44,000</td>
+<td>46,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>40,000</td>
+<td>44,000</td>
 </tr>
 <tr>
 <td>3</td>
+<td>Norma1</td>
+<td>38,000</td>
+</tr>
+<tr>
+<td>4t</td>
 <td>JoAnnmeme</td>
 <td>32,000</td>
 </tr>
 <tr>
-<td>4</td>
-<td>Norma1</td>
-<td>28,000</td>
+<td>4t</td>
+<td>Nana_Sharon</td>
+<td>32,000</td>
 </tr>
 <tr>
-<td>5</td>
-<td>Nana_Sharon</td>
+<td>6t</td>
+<td>Maryjean</td>
 <td>24,000</td>
 </tr>
 <tr>
-<td>6</td>
+<td>6t</td>
 <td>patc</td>
-<td>18,000</td>
-</tr>
-<tr>
-<td>7</td>
-<td>Maryjean</td>
-<td>12,000</td>
+<td>24,000</td>
 </tr>
 </tbody>
 </table>
