--- a/index.html
+++ b/index.html
@@ -402,6 +402,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="mjs-special">MJ's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -415,27 +452,27 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>68,000</td>
+<td>76,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
-<td>60,000</td>
+<td>Norma1</td>
+<td>66,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Norma1</td>
-<td>56,000</td>
+<td>PaPaLarry</td>
+<td>64,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>JoAnnmeme</td>
-<td>44,000</td>
+<td>56,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Nana_Sharon</td>
-<td>42,000</td>
+<td>48,000</td>
 </tr>
 <tr>
 <td>6</td>
