--- a/index.html
+++ b/index.html
@@ -407,6 +407,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="mjs-special">MJ's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>JoAnnmeme</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -420,32 +462,32 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>90,000</td>
+<td>94,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>80,000</td>
+<td>90,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>72,000</td>
+<td>80,000</td>
 </tr>
 <tr>
-<td>4t</td>
-<td>JoAnnmeme</td>
-<td>70,000</td>
-</tr>
-<tr>
-<td>4t</td>
+<td>4</td>
 <td>Norma1</td>
-<td>70,000</td>
+<td>76,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>72,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Maryjean</td>
-<td>40,000</td>
+<td>52,000</td>
 </tr>
 <tr>
 <td>7</td>
