--- a/scores/index.html
+++ b/scores/index.html
@@ -394,7 +394,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="mjs-special">MJ's Special</h1>
 <table>
 <thead>
 <tr>
@@ -406,23 +406,60 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>bill</td>
-<td>114,000</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
 </tr>
 <tr>
 <td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
 <td>PaPaLarry</td>
-<td>110,000</td>
+<td>122,000</td>
+</tr>
+<tr>
+<td>1t</td>
+<td>bill</td>
+<td>122,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>90,000</td>
+<td>100,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>JoAnnmeme</td>
-<td>78,000</td>
+<td>82,000</td>
 </tr>
 <tr>
 <td>5</td>
@@ -437,7 +474,7 @@
 <tr>
 <td>7</td>
 <td>patc</td>
-<td>44,000</td>
+<td>50,000</td>
 </tr>
 </tbody>
 </table>
