--- a/index.html
+++ b/index.html
@@ -338,6 +338,41 @@
 <td>gracie</td>
 <td>12,000</td>
 </tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>joe</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Maryjean</td>
+<td>1,000</td>
+</tr>
+<tr>
+<td>8</td>
+<td>bill</td>
+<td>500</td>
+</tr>
 </tbody>
 </table>
 <h1 id="month-point-totals">Month Point Totals</h1>
@@ -351,34 +386,34 @@
 </thead>
 <tbody>
 <tr>
-<td>1t</td>
+<td>1</td>
 <td>PaPaLarry</td>
-<td>122,000</td>
+<td>132,000</td>
 </tr>
 <tr>
-<td>1t</td>
+<td>2</td>
 <td>bill</td>
-<td>122,000</td>
+<td>122,500</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>100,000</td>
+<td>108,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>JoAnnmeme</td>
-<td>82,000</td>
+<td>86,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Norma1</td>
-<td>76,000</td>
+<td>82,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Maryjean</td>
-<td>52,000</td>
+<td>53,000</td>
 </tr>
 <tr>
 <td>7</td>
@@ -389,6 +424,11 @@
 <td>8</td>
 <td>gracie</td>
 <td>12,000</td>
+</tr>
+<tr>
+<td>9</td>
+<td>joe</td>
+<td>2,000</td>
 </tr>
 </tbody>
 </table>
