--- a/index.html
+++ b/index.html
@@ -437,6 +437,63 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>gracie</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>patc</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>JoAnnmeme</td>
+<td>1,000</td>
+</tr>
+<tr>
+<td>8</td>
+<td>joe</td>
+<td>500</td>
+</tr>
+<tr>
+<td>9</td>
+<td>PaPaLarry</td>
+<td>250</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -448,49 +505,49 @@
 </thead>
 <tbody>
 <tr>
-<td>1t</td>
-<td>JoAnnmeme</td>
-<td>18,000</td>
+<td>1</td>
+<td>Norma1</td>
+<td>22,250</td>
 </tr>
 <tr>
-<td>1t</td>
-<td>joe</td>
-<td>18,000</td>
+<td>2</td>
+<td>bill</td>
+<td>20,500</td>
 </tr>
 <tr>
 <td>3</td>
-<td>PaPaLarry</td>
-<td>14,000</td>
+<td>JoAnnmeme</td>
+<td>19,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>bill</td>
-<td>12,500</td>
+<td>joe</td>
+<td>18,500</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Norma1</td>
-<td>10,250</td>
+<td>PaPaLarry</td>
+<td>14,250</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Nana_Sharon</td>
-<td>6,000</td>
+<td>gracie</td>
+<td>13,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Maryjean</td>
-<td>5,000</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>gracie</td>
-<td>3,000</td>
+<td>Maryjean</td>
+<td>9,000</td>
 </tr>
 <tr>
 <td>9</td>
 <td>patc</td>
-<td>750</td>
+<td>2,750</td>
 </tr>
 </tbody>
 </table>
