--- a/index.html
+++ b/index.html
@@ -370,6 +370,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>gracie</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>joe</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Maryjean</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -382,43 +429,43 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>bill</td>
-<td>26,500</td>
+<td>gracie</td>
+<td>33,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Norma1</td>
-<td>26,250</td>
+<td>Nana_Sharon</td>
+<td>32,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>gracie</td>
-<td>25,000</td>
+<td>bill</td>
+<td>30,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Nana_Sharon</td>
-<td>20,000</td>
+<td>Norma1</td>
+<td>28,250</td>
 </tr>
 <tr>
 <td>5</td>
+<td>PaPaLarry</td>
+<td>26,250</td>
+</tr>
+<tr>
+<td>6</td>
 <td>joe</td>
-<td>19,500</td>
+<td>25,500</td>
 </tr>
 <tr>
-<td>6t</td>
-<td>JoAnnmeme</td>
-<td>19,000</td>
-</tr>
-<tr>
-<td>6t</td>
+<td>7</td>
 <td>Maryjean</td>
-<td>19,000</td>
+<td>20,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>PaPaLarry</td>
-<td>16,250</td>
+<td>JoAnnmeme</td>
+<td>19,000</td>
 </tr>
 <tr>
 <td>9</td>
