Publishing to gh-pages (publish.sh) - 2025-06-20

--- a/index.html
+++ b/index.html
@@ -397,6 +397,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="pats-special">Pat's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -410,22 +447,22 @@
 <tr>
 <td>1</td>
 <td>bill</td>
-<td>130,000</td>
+<td>138,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Nana_Sharon</td>
-<td>124,000</td>
+<td>136,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Norma1</td>
-<td>116,000</td>
+<td>122,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>PaPaLarry</td>
-<td>112,000</td>
+<td>116,000</td>
 </tr>
 <tr>
 <td>5</td>
@@ -433,12 +470,12 @@
 <td>102,000</td>
 </tr>
 <tr>
-<td>6t</td>
+<td>6</td>
 <td>Maryjean</td>
-<td>62,000</td>
+<td>72,000</td>
 </tr>
 <tr>
-<td>6t</td>
+<td>7</td>
 <td>patc</td>
 <td>62,000</td>
 </tr>
