Publishing to gh-pages (publish.sh) - 2025-09-29

--- a/index.html
+++ b/index.html
@@ -360,6 +360,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>800,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -372,33 +409,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>patc</td>
-<td>169,000</td>
+<td>Maryjean</td>
+<td>1,081,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>127,000</td>
+<td>patc</td>
+<td>1,069,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>119,000</td>
+<td>PaPaLarry</td>
+<td>1,049,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>PaPaLarry</td>
-<td>99,000</td>
+<td>Nana_Sharon</td>
+<td>977,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>JoAnnmeme</td>
-<td>98,000</td>
+<td>bill</td>
+<td>919,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Maryjean</td>
-<td>81,000</td>
+<td>JoAnnmeme</td>
+<td>98,000</td>
 </tr>
 <tr>
 <td>7</td>
